# ai-observability-rca-engine

./: .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README_en.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  evaluation.md  operations.md  operator-console.md  rag.md  rca-design.md  runbook.md  security.md
eval/datasets/: rag_queries.dev.jsonl  rag_queries.holdout.jsonl  rag_queries.jsonl  rca_queries.dev.jsonl  rca_queries.holdout.jsonl  rca_queries.jsonl
eval/fixtures/: agent_reports.json  events.json  incident_graphs.json  rag_documents.json  rca_results.json  replay_events.hard.json  replay_events.json  runbooks.hard.json  runbooks.json
infra/: neo4j.cypher  postgres.sql
runtime/output/: eval-dev-compare.md  eval-holdout-compare.md
src/rca_engine/: __init__.py  api.py  config.py  correlator.py  hash_utils.py  main.py  normalizer.py  timeutils.py
src/rca_engine/agents/: __init__.py  log_agent.py  metric_agent.py  notification.py  orchestrator.py  runbook_catalog.py  trace_agent.py
src/rca_engine/console/: __init__.py  app.py
src/rca_engine/evaluation/: __init__.py  __main__.py  comparison.py  fixture_store.py  metrics.py  replay.py  replay_store.py  runner.py  schemas.py
src/rca_engine/models/: __init__.py  agents.py  rag.py  (+3 more)
tests/: test_agent_orchestrator.py  test_composite_storage.py  test_correlator.py  test_evaluation.py  test_llm_provider.py  test_normalizer_json.py  test_processors.py  test_query_pagination.py  test_rag_copilot.py  test_rag_indexer.py  test_rag_pipeline.py  test_rca_orchestrator.py  test_storage.py
(+45 files in other folders)
