[project]
name = "ai-observability-rca-engine"
version = "0.1.0"
description = "Containerized incident correlation, deterministic RCA, and retrieval service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "kafka-python>=2.0,<3.0",
  "opentelemetry-proto>=1.27,<2.0",
  "protobuf>=4.25,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "neo4j>=5.20,<6.0",
  "requests>=2.32,<3.0",
  "streamlit>=1.37,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9.0",
]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
files = ["src"]
